2005-01-31  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py:
	Explicitly write the protouser's xauth file since
	we need to change the display number.
	Use execve instead of changing os.environ.
	Add debugging spew.

2005-01-31  Mark McLoughlin  <mark@skynet.ie>

	* lib/dirmonitor.py: disconnect from gamin when
	stopping the monitor.

2005-01-31  Mark McLoughlin  <mark@skynet.ie>

	* lib/dirmonitor.py: remove all watches when
	stopping monitoring.

2005-01-31  Mark McLoughlin  <mark@skynet.ie>

	* lib/dirmonitor.py: fixup some bugs, passes unit
	tests again.

2005-01-29  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.ac: Added pt_BR to ALL_LINGUAS.

2005-01-28  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: copy the xauth file for the user
	before starting the session.

2005-01-28  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: add code to write out an xauth
	file for Xnest.

Fri Jan 28 11:20:03 CET 2005 Daniel Veillard <veillard@redhat.com>

	* README lib/dirmonitor.py: switching to using gamin directly
	  for the directory watches.

2005-01-27  Mark McLoughlin  <mark@skynet.ie>

	* lib/protosession.py: checkpoint of the session
	launching code.

2005-01-27  Mark McLoughlin  <mark@skynet.ie>

	* lib/util.py: hmm, use GeneralError again.

2005-01-26  Mark McLoughlin  <mark@skynet.ie>

	* lib/util.py: pull username and homedir from
	the passwd database if available.

2005-01-25  Adam Weinberger  <adamw@gnome.org>

	* configure.ac: Added en_CA to ALL_LINGUAS.

2005-01-25  Mark McLoughlin  <mark@skynet.ie>

	* lib/userprofile.py: introduce the concept of a
	"delegate" - a helper class to give a higher level
	interpretation of some changes from a given source.
	
	* lib/sources/paneldelegate.py: an implementation
	of the helper class for the panel's config - so, e.g.,
	when you added an applet you get "applet added" rather
	than a whole bunch of GConf keys changed.
	
	* lib/sources/Makefile.am: add paneldelegate.py.
	